# instrument_to_midi

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  QUICKSTART.md  README.md  config.example.json  rustfmt.toml
.github/workflows/: ci.yml
src/: fuzzy.rs  lib.rs  main.rs  processor.rs
src/audio/: mod.rs
src/config/: mod.rs
src/midi/: mod.rs  recorder.rs
src/pitch/: mod.rs  polyphonic.rs
src/web/: mod.rs  server.rs
static/: index.html
tests/: audio_generator.rs  fuzzy_detection_test.rs  integration_test.rs  polyphonic_test.rs  recording_test.rs  web_ui_test.rs
